# fastapi-template

./: .gitignore  Dockerfile  Makefile  README.md  entrypoiny.sh  fastapi-start.sh  main.py  pyproject.toml  req.txt
api/: __init__.py  api.py
api/v1/: api.py  posts.py
core/: config.py  connections.py  database.py  dependencies.py  exceptions.py  repository.py  security.py
migrations/: env.py
migrations/versions/: c66affada0a8_added_posts_model.py
models/: posts.py
models/db/migrations/: env.py
proto/: auth.proto  auth_pb2.py  auth_pb2_grpc.py
repository/: posts.py
schemas/: posts.py
services/: auth.py  posts.py
