[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Vladimir Velikovich <vvelikovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.4"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
